--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,7 @@
   --green3:  #086972;
   --green4:  #071a52;
   --link-grey: rgb(136, 136, 136);
+  --text-grey: rgb(85, 85, 85);
   --icon-grey: rgb(192, 192, 192);
   --nav-grey: rgb(245, 245, 245);
 }
@@ -161,18 +162,64 @@ nav{
 .main{
 }
 
-#p1{
-  display: flex;
+/* home page */
+
+.mobile-stretcher{
+  height: 80vh;
 }
-#p2{
+.message{
   display: flex;
+  justify-content: center;
+  text-align: center;
+  margin: 3rem;
+  font-size: 3rem;
+  color: var(--text-grey);
 }
-#p3{
+.sub-text{
+  margin-top: 2rem;
   display: flex;
+  justify-content: center;
+  font-size: 1.4rem;
+  color: var(--link-grey);
 }
-#p4{
+
+.skills{
   display: flex;
+  justify-content: center;
+  margin: 1.6rem;
 }
+.skills ion-icon{
+  font-size: 75px;
+  padding: 0 0.5rem;
+}
+#react ion-icon{
+  color: rgb(27, 202, 255);
+}
+#firebase ion-icon{
+  color: rgb(255, 183, 27);
+}
+#html ion-icon{
+  color: rgb(255, 54, 27);
+}
+#css ion-icon{
+  color: rgb(27, 80, 255);
+}
+#js ion-icon{
+  color: rgb(255, 232, 27);
+}
+
+.other-skills{
+  display: flex;
+  justify-content: center;
+  margin: 1.6rem;
+}
+.other-skills ion-icon{
+  color: var(--link-grey);
+  font-size: 36px;
+  padding: 0.5rem 0.5rem;;
+}
+
+/* projects */
 .project-controls{
   display: none;
 }
@@ -226,8 +273,6 @@ footer{
 .footer .nav-item{
   padding: 0 0.5rem;
 }
-
-
 
 /* MEDIA QUERIES */
 @media screen and (min-width: 800px){
@@ -339,6 +384,21 @@ footer{
   }
   .project-info h5{
     padding-bottom: 0.5rem;
+  }
+}
+
+@media screen and (max-width: 800px){
+  #p1{
+    display: flex;
+  }
+  #p2{
+    display: flex;
+  }
+  #p3{
+    display: flex;
+  }
+  #p4{
+    display: flex;
   }
 }
 
