--- a/src/App.css
+++ b/src/App.css
@@ -250,14 +250,16 @@ nav{
   width: 80%;
 }
 .text-block{
-  padding: 0 4rem;
+  padding: 0 1rem;
 }
 .main-line{
   font-size: 1.5rem;
   margin: 1rem 1.5rem;
+  text-align: center;
 }
 .one-liner{
   margin: 1rem 1.5rem;
+  text-align: center;
 }
 .card-reverse {
   display: flex;
@@ -277,23 +279,43 @@ nav{
 .project-content{
   display: flex;
   flex-direction: column;
-  margin: 0 1rem;
+  justify-content: center;
+  vertical-align: center;
 }
 .project-card{
   display: flex;
   flex-direction: column;
   margin-top: 2rem;
 }
+.project-image{
+  overflow: hidden;
+  object-fit: contain;
+  height: 250px;
+}
+.project-image img{
+  width: 100%;
+  transition: all 2s ease-in-out;
+  transform-origin: top left;
+}
+.project-image img:hover{
+  transform: scale(1.1);
+  transform-origin: top left;  
+}
 .project-info h2{
   padding-top: 1rem;
+  padding-bottom: 0.9rem;
+}
+.project-info h4{
   padding-bottom: 0.5rem;
 }
 .project-info h5{
-  padding-bottom: 0.5rem;
+  padding-bottom:  0.5rem;
+}
+.project-info p{
+  padding-bottom:  0.8rem;
 }
 .technologies{
   padding-bottom: 0.5rem;
-  padding-top: 0.5rem;
 }
 .technologies ul{
   list-style: none;
@@ -399,9 +421,11 @@ footer{
   .main-line{
     font-size: 1.5rem;
     margin: 1rem 0;
+    text-align: left;
   }
   .one-liner{
     margin: 1rem 0;
+    text-align: left;
   }
   .card-reverse {
     display: flex;
@@ -468,18 +492,41 @@ footer{
     flex-direction: row;
     justify-content: center;
   }
+  .project-content{
+    height: auto;
+    margin: 0;
+  }
   .project-card{
     flex-direction: row;
   }
+  .project-image{
+    overflow: hidden;
+    object-fit: cover;
+    height: 90%;
+    margin-right: 1rem;
+  }
+  .project-image img{
+    height: 100%;
+    transition: all 2s ease-in-out;
+    transform-origin: top left;
+  }
   .project-info{
-    margin-left: 1rem
+    width: 80%;
   }
   .project-info h2{
-    padding-top: 1rem;
-    padding-bottom: 0.5rem;
+    padding-top: 0;
+    padding-bottom:0.5rem;
   }
   .project-info h5{
     padding-bottom: 0.5rem;
+  }
+
+
+
+/* footer */
+  footer{
+    background-color: var(--nav-grey);
+    height: auto;
   }
 }
 
